<resources>
    <string name="app_name">Dhiwise Figma App</string>
    <string name="please_enter_figma_link">Please enter figma link or figma file id</string>
    <string name="please_enter_figma_token">Please enter figma token</string>
    <string name="please_provide_figma_details">Please provide figma details:</string>
    <string name="submit">Submit</string>
    <string name="use_default">Set Defaults</string>
    <string name="render_login_screen">Render Login Screen</string>
    <string name="render_signup_screen">Render Signup Screen</string>
</resources>